feat: routes transition

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Checkpoint</title>
   <meta name="description" content="Opinionated Vite Starter Template">
 </head>
-<body class="font-sans dark:text-white dark:bg-hex-121212">
-  <div id="app" class="overflow-hidden"></div>
+<body class="font-sans dark:text-white dark:bg-hex-121212" >
+  <div id="app"></div>
   <script>
     (function () {
       const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
